--- a/StocksViewer.UI/Views/Shared/_Layout.cshtml
+++ b/StocksViewer.UI/Views/Shared/_Layout.cshtml
@@ -22,11 +22,10 @@
                         </h1>
                     </div>
                     <div class="flex-1 pr" id="search-box-div">
-
-                        <input type="search" class="search-text" placeholder="Search Stocks" name="SearchText" />
-                        <i class="fa-solid fa-gear"></i>
-
-                        <button class="button button-blue-back ml login-button">Login</button>
+                        <form asp-controller="Trade" asp-action="Index" method="get">
+                            <input type="search" class="search-text" placeholder="Search Stocks" name="stockSymbol" />
+                            <button class="button trading-button">Search</button>
+                        </form>
                     </div>
                 </div>
             </div>
